# ray_tracer

./: Cargo.toml  README.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  rust.yml
benches/: intersection.rs  lighting.rs  matrix.rs  render.rs  vector.rs  world.rs
examples/: chapter1.rs  chapter10.rs  chapter11.rs  chapter12.rs  chapter13.rs  chapter14.rs  chapter15.rs  chapter16.rs  chapter2.rs  chapter3.rs  chapter4.rs  chapter5.rs  chapter6.rs  chapter7.rs  chapter8-rayon.rs  chapter8.rs  chapter9.rs  cover.rs
src/: bounds.rs  camera.rs  canvas.rs  color.rs  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  obj_parser.rs  objects.rs  pattern.rs  patterns.rs  point.rs  ray.rs  render.rs  scalar.rs  shape.rs  shapes.rs  sphere.rs  transform.rs  transformations.rs  transforms.rs  vector.rs  world.rs
src/pattern/: checkers.rs  gradiant.rs  ring.rs  stripe.rs
src/patterns/: checkers_pattern.rs  gradient_pattern.rs  ring_pattern.rs  solid_pattern.rs  stripe_pattern.rs
src/shape/: cone.rs  csg.rs  cube.rs  cylinder.rs  group.rs  plane.rs  smooth_triangle.rs  sphere.rs  triangle.rs
src/shapes/: cone.rs  cube.rs  cylinder.rs  group.rs  plane.rs  sphere.rs  triangle.rs
