[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.69"
approx = "0.5.1"
itertools = "0.10.5"
ord_subset = "3.1.1"
rayon = "1.6.1"
thiserror = "1.0.38"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
