[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
anyhow = "1"
approx = "0.5.1"
itertools = "0.13.0"
ord_subset = "3"
rayon = "1"
thiserror = "2"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
